# kvs

./: Cargo.toml  README.md
benches/: kvs_bench.rs
project-1/: Cargo.toml
project-1/src/: lib.rs
project-1/tests/: tests.rs
src/: client.rs  engine.rs  error.rs  kvstore.rs  lib.rs  server.rs
src/engine/: kvs.rs  mod.rs  sled.rs
tests/: cli.rs
