[package]
name = "kvs"
version = "0.1.0"
authors = ["Assil Ksiksi <cyph0nik@gmail.com>"]
edition = "2018"

[dependencies]
clap = "2"
serde = "1"
rmp-serde = "0.15.0"

[dev-dependencies]
criterion = "0.3"
assert_cmd = "0.11.0"
predicates = "1.0.0"
tempfile = "3.0.7"
walkdir = "2.2.7"

# We do not need the lib and bin tests
[lib]
test = false
doctest = false

[[bin]]
name = "kvs"
test = false
doctest = false

[[bench]]
name = "kvs_bench"
harness = false
