[package]
name = "kvs"
version = "0.1.0"
authors = ["Assil Ksiksi <cyph0nik@gmail.com>"]
edition = "2018"

[dependencies]
clap = "2"
serde = "1"
rmp-serde = "0.15.0"
log = "0.4.11"
env_logger = "0.8.2"
sled = "0.34.6"

[dev-dependencies]
criterion = "0.3"
assert_cmd = "0.11.0"
predicates = "1.0.0"
tempfile = "3.0.7"
walkdir = "2.2.7"
rand = "0.6.5"

# We do not need the lib and bin tests
[lib]
test = false
doctest = false

[[bin]]
name = "kvs"
test = false
doctest = false

[[bin]]
name = "kvs-client"
path = "src/bin/kvs_client.rs"
test = false
doctest = false

[[bin]]
name = "kvs-server"
path = "src/bin/kvs_server.rs"
test = false
doctest = false

[[bench]]
name = "kvs_bench"
harness = false
